--- a/rre-server/src/main/resources/Default.vm
+++ b/rre-server/src/main/resources/Default.vm
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
         <meta http-equiv="refresh" content="2">
     </head>
     <body>
