[ issue #18 ] Fix on RRE Dashboard

--- a/rre-server/src/main/resources/templates/VM_global_library.vm
+++ b/rre-server/src/main/resources/templates/VM_global_library.vm
@@ -34,10 +34,10 @@
 #macro(print_hits $query)
     #set ($resultsMap = $query.results)
     #set($thisid = $f.id($query.name))
-    #if($id == $thisid))
-        $state = "in";
+    #if($id == $thisid)
+        #set ($state = "in")
     #else
-        $state = "";
+        #set ($state = "")
     #end
 
     <tr class="collapse $state" id="$thisid">
