--- a/rre-server/src/main/resources/static/modules/main/views/main.html
+++ b/rre-server/src/main/resources/static/modules/main/views/main.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top mb-4" ng-controller="NavbarController">
     <a class="navbar-brand" href="#">{{vm.navBarTitle}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
